--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,200,300,regular,500,600,700,800,900);
-@import "tailwindcss";
+@import 'tailwindcss';
 
 body {
   font-family: 'Poppins', sans-serif;
