--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  @apply bg-neutral-800 text-white;
 }
 
 .slick-list {
@@ -17,6 +18,7 @@ body {
 .ant-carousel .slick-next {
   border-radius: 100%;
   color: white;
+  transform: translateY(-150%);
 
   @apply bg-neutral-700/90;
   padding: 30px;
